FIX :: header z-index

--- a/styles/components/header.module.scss
+++ b/styles/components/header.module.scss
@@ -54,6 +54,7 @@
     position: fixed;
     width: 100%;
     height: 100%;
+    z-index: 100;
 }
 
 .dropdown{
@@ -65,6 +66,8 @@
         text-align: center;
         border-bottom: 1px solid #EAEAEA;
         background-color: white;
+        position: relative;
+        z-index: 100;
         cursor: pointer;
         &:last-child{
             height: 80px;
